--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
 
-    <title>Youtube</title>
+    <title>Youtube Colone By Zeyad</title>
   </head>
   <body>
     <div id="root"></div>
